// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSumary with multiple expenses 1`] = `
<div>
  <h1>
    viewing 
    2
     
    expenses
     totalling 
    $2,564,564.35
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <h1>
    viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;
